<resources>
    <string name="app_name">Testity</string>

    <!--Main Activity !-->
    <string name="create_test">CREATE</string>
    <string name="my_tests">TESTS</string>
    <string name="results">RESULTS</string>
    <string name="find_test">FIND</string>
    <string name="invite_friends">INVITE</string>
    <string name="rate_us">RATE US</string>
    <string name="sign_out">Sign Out</string>
    <string name="anonymous">Anonymous user</string>
    <string name="sign_out_message">Do you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <!-- Login activity !-->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="create_account_text">Create Account</string>
    <string name="name_hint">Your name</string>
    <string name="loading">Loading…</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="reset_password">reset password</string>
    <string name="auth_successful">Authentication successful</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="cannot_create_acc">Cannot create account</string>
    <string name="pass_sent">Link to reset password have been sent to your email</string>
    <string name="unable_set_name">Unable to set user name</string>
    <string name="or">OR</string>
    <string name="unable_send">Unable to send link to reset password</string>
    <string name="no_email">No Email</string>
    <string name="no_connection">No internet connection! Please connect and try again</string>

    <!-- For Facebook login !-->
    <string name="facebook_app_id" translatable="false">694422630950774</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb694422630950774</string>

    <!-- Invite friends !-->
    <string name="invitation_title">SEND INVITATION</string>
    <string name="invitation_message">Try to pass test in Testity!</string>
    <string name="invitation_custom_image" translatable="false">https://developers.google.com/identity/images/g-logo.png</string>
    <string name="invitation_deep_link" translatable="false">http://sergeyyaniuk.com/testity/</string>
    <string name="invitation_cta">Install!</string>
    <string name="invitation_sent">Invitation sent successfully</string>
    <string name="send_invitation_failed">Sending invitations failed</string>
    <string name="google_play_services_error" translatable="false">Google Play Services Error</string>

    <!--  CreateTestActivity test activity !-->
    <string name="create_test_title">Create test</string>
    <string name="language">Language</string>
    <string name="iq" translatable="false">IQ</string>
    <string name="recruiting">Career/Recruiting</string>
    <string name="books">Books</string>
    <string name="kids">For kids</string>
    <string name="school">School/University</string>
    <string name="other">Other</string>
    <string name="movie">Movie</string>
    <string name="health">Health</string>
    <string name="personality">Personality</string>
    <string name="astrology">Astrology</string>
    <string name="think_memory">Think/Memory</string>
    <string name="science">Science</string>

    <string name="title_hint">Test name</string>
    <string name="hint_description_test">Description</string>
    <string name="category">Category</string>
    <string name="available_online">Available online</string>
    <string name="add_questions">Continue</string>
    <string name="stop_edit_test">Do you want to stop editing test?</string>

    <string name="done">Done</string>
    <string name="add">Add</string>

    <string name="type_your_question">Type your question here</string>
    <string name="explanation">Write your answers below and mark if correct.</string>
    <string name="answer_1">Answer #1</string>
    <string name="answer_2">Answer #2</string>
    <string name="answer_3">Answer #3</string>
    <string name="answer_4">Answer #4</string>
    <string name="answer_5">Answer #5</string>
    <string name="answer_6">Answer #6</string>
    <string name="answer_7">Answer #7</string>
    <string name="answer_8">Answer #8</string>
    <string name="check_correct_answer">Mark at least one correct answer</string>
    <string name="did_not_specify_answer">You did not specify any answer</string>
    <string name="check_if_correct">Mark, if correct</string>

    <string name="item_removed">Item was removed from the list</string>
    <string name="undo">UNDO</string>
    <string name="not_completed_test">You have an not completed test. Would you like to continue or create new one?</string>
    <string name="continue_test">Continue</string>
    <string name="create_new">Create new</string>
    <string name="cannot_add_test">Cannot add test to database</string>
    <string name="cannot_add_question">Cannot add question to database</string>
    <string name="cannot_add_answers">Cannot add answers to database</string>

    <!-- Error messages text !-->
    <string name="required">This field is required</string>

    <!-- MyTestsActivity !-->
    <string name="my_tests_title">Your tests</string>
    <string name="edit_test">edit test</string>
    <string name="number_of_questions">number of questions</string>
    <string name="no_questions">No questions yet</string>
    <string name="pass">Pass</string>
    <string name="back">Back</string>
    <string name="test_deleted">The test has been deleted</string>
    <string name="delete_test">Delete this test?</string>
    <string name="confirm">Confirm</string>
    <string name="please_add_ques">Please add questions to the test.</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="question_is_deleted">The question has been deleted</string>
    <string name="unable_delete_question">Unable to delete this question</string>
    <string name="delete_question">Delete this question?</string>
    <string name="end_test">The test is over</string>


    <!-- EditTestActivity !-->
    <string name="edit_questions">Continue</string>
    <string name="cannot_update_test">Cannot update test</string>

    <!-- StartTestActivity !-->
    <string name="your_name">Your name</string>
    <string name="start_test">Start test</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="of">of</string>

    <!-- EndTestActivity !-->
    <string name="your_score">Your score</string>
    <string name="finish">Finish</string>

    <!-- FindListActivity !-->
    <string name="find_test_title">FIND TEST</string>
    <string name="sort_tests">Sort tests</string>
    <string name="header_filters">Test Filter</string>
    <string name="apply">Apply</string>
    <string name="message_no_results">Oops, couldn\'t find any results\nthat matched your filter</string>
    <string name="no_tests_error">Cannot load tests</string>
    <string name="all_categories">All categories</string>
    <string name="all_languages">All languages</string>
    <string name="no_sorting" translatable="false">------</string>
    <string name="sort_by_rating">Sort by Rating</string>
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="created_by">Created by</string>
    <string name="author">Author</string>
    <string name="no_answers">Cannot load answers</string>
    <string name="this_test_not_completed">This test is not completed</string>
    <string name="sort_by">Sort by</string>
    <string name="created">Created</string>

    <!--FPassTestActivity !-->
    <string name="rate_test">Rate the test</string>

    <!-- ResultsActivity !-->
    <string name="local_results">LOCAL</string>
    <string name="online_results">ONLINE</string>
    <string name="result_deleted">The result has been deleted</string>
    <string name="unable_delete_result">Unable to delete this result</string>
    <string name="delete_result">Delete this result?</string>
    <string name="test_name">Test name</string>
    <string name="date">Date</string>
    <string name="time_spent">Time spent</string>
    <string name="minutes">min</string>

    <string name="logo_url" translatable="false">https://imgur.com/a/Gifi3zs</string>

</resources>
