<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:elevation="16dp"
    android:background="@drawable/buttons_main_activity_not_pressed">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/not_completed_test"
        android:textSize="20sp"
        android:textColor="@color/color_white"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:textSize="12sp"
            android:elevation="8dp"
            android:padding="4dp"
            android:background="@drawable/background_button"
            android:text="@string/continue_test"/>

        <Button
            android:id="@+id/create_new_button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            android:elevation="8dp"
            android:padding="4dp"
            android:background="@drawable/background_button"
            android:text="@string/create_new"/>
    </LinearLayout>

</LinearLayout>