<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_result"
        android:textSize="20sp"
        android:fontFamily="@font/raleway"
        android:textColor="@color/color_white"
        android:gravity="center"
        android:padding="16dp"
        android:background="@drawable/background_dialog"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:textSize="12sp"
            android:padding="4dp"
            android:textColor="@color/color_white"
            android:fontFamily="@font/raleway"
            android:background="@drawable/button_blue"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            android:padding="4dp"
            android:textColor="@color/color_white"
            android:fontFamily="@font/raleway"
            android:background="@drawable/button_green"
            android:text="@string/ok"/>
    </LinearLayout>

</LinearLayout>