<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingTop="16dp"
        android:background="@drawable/background_dialog">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:elevation="8dp"
            android:src="@drawable/user_login" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_text"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:padding="8dp"
            android:fontFamily="@font/raleway"
            android:textColor="@color/color_white"
            android:gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_white"/>

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_white_with_corners"
            android:cursorVisible="true"
            android:elevation="8dp"
            android:fontFamily="@font/raleway"
            android:hint="@string/name_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textStyle="italic" />


        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_white_with_corners"
            android:cursorVisible="true"
            android:elevation="8dp"
            android:fontFamily="@font/raleway"
            android:hint="@string/email_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/background_white_with_corners"
            android:cursorVisible="true"
            android:elevation="8dp"
            android:fontFamily="@font/raleway"
            android:hint="@string/password_hint"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:textSize="12sp"
            android:padding="4dp"
            android:textColor="@color/color_white"
            android:fontFamily="@font/raleway"
            android:background="@drawable/button_blue"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            android:padding="4dp"
            android:textColor="@color/color_white"
            android:fontFamily="@font/raleway"
            android:background="@drawable/button_green"
            android:text="@string/ok"/>
    </LinearLayout>
</LinearLayout>