<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:elevation="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:imeOptions="actionNext"
            android:cursorVisible="true"
            android:inputType="text"
            android:fontFamily="@font/raleway"
            android:textSize="16sp"
            android:textStyle="italic"
            android:background="@drawable/background_white_with_corners"/>

        <TextView
            android:id="@+id/category_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/color_white"
            android:textSize="16sp"
            android:fontFamily="@font/raleway"
            android:textStyle="italic"
            android:layout_marginTop="16dp"/>

        <Spinner
            android:id="@+id/category_spinner"
            style="@style/Base.Widget.AppCompat.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/background_white_with_corners"
            android:entries="@array/category_list" />

        <TextView
            android:id="@+id/language_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/color_white"
            android:textSize="16sp"
            android:fontFamily="@font/raleway"
            android:textStyle="italic"
            android:layout_marginTop="16dp"/>

        <Spinner
            android:id="@+id/language_spinner"
            style="@style/Base.Widget.AppCompat.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/background_white_with_corners"
            android:entries="@array/language_list" />

        <LinearLayout
            android:id="@+id/is_online_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:elevation="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/background_blue_with_white_line">

            <TextView
                android:id="@+id/is_online_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/available_online"
                android:textColor="@color/color_white"
                android:textSize="16sp"
                android:fontFamily="@font/raleway"/>

            <CheckBox
                android:id="@+id/is_online_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:background="@drawable/background_white_with_two_corners"/>
        </LinearLayout>

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description_test"
            android:elevation="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:imeOptions="actionNext"
            android:cursorVisible="true"
            android:inputType="textMultiLine"
            android:fontFamily="@font/raleway"
            android:textSize="16sp"
            android:textStyle="italic"
            android:background="@drawable/background_white_with_corners"/>

        <Button
            android:id="@+id/add_questions_button"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@drawable/button_green"
            android:fontFamily="@font/raleway"
            android:padding="4dp"
            android:elevation="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/add_questions"
            android:textColor="@color/color_white"
            android:textSize="12sp" />
    </LinearLayout>
</ScrollView>